<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_first_name_hint" />

    <EditText
        android:id="@+id/editTextClientLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_last_name_hint" />

    <EditText
        android:id="@+id/editTextClientCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_cpf_hint" />

    <EditText
        android:id="@+id/editTextClientAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_address_hint" />

    <Button
        android:id="@+id/buttonClientRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonClientUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonClientRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete" />

    <Button
        android:id="@+id/buttonClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search" />

    <TextView
        android:id="@+id/textViewClientOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
